--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "phpmailer/phpmailer": "^6.10",
         "tymon/jwt-auth": "^2.0",
         "yajra/laravel-datatables": "^10.1"
     },
